Version 1.4.4
* Post 2.1 tagging
* Slightly faster and more relaxed frame finding for VLBA and Mark4 formats
* Numerous small improvements based on improved cppcheck exposed by Martin
Ettl
* Add genheaders() for Mark4 and Mark5B formats
* m5test: minor improvements
* c++11 compliance

Version 1.4.3
* Post 2.0.1 tagging
* Adopt more unix-standard return values in utility programs
* mk5spec: work on complex data (Chris Phillips)
* VDIF format determination by data peeking added
* Version for DiFX-2.1, May 4, 2012

Version 1.4.2
* Post 2.0.0 tagging
* Start adding state counting for use in power detection.  2-bit sampling supported only at this time.
* Add m5tsys
* Can now make RedHat RPM
* Fix some memory leaks identified by valgrind.
* Introduce new_mark5_stream_absorb.  like new_mark5_stream, but it cleanly and immediately deallocates space for the temporary mark5_stream_generic and mark5_format_generic structures
* Version for DiFX-2.0.1, June 10, 2011

Version 1.4.1
* revert to standard "c" types (long long, unsigned char, ...) over int64_t, uint8_t
* disable all K5 code until that is at least somewhat useful
* Some memory leak fixes from Alexander Neidhardt and Martin Ettl (from Wettzell)
* Add m5fold utility
* Add some 4 and 8 bit unpackers for VDIF format
* m5d and m5spec : behave better if -h is given
* mark5_format_mark5b_init: if no nanoseconds in headers, then assume 2048-16-2 (this is to support Mark5B mode via Mark5C)
* Put pcal utility in this package
* Add zerocorr -- a zero baseline cross correlator
* Add sigint catching to several utils
* Improve string (mostly filename) handling safety with snprintf
* Allow read from stdin (at least in some circumstances) via filename = "-"
* Version for DiFX-2.0.0

Version 1.4.0
* Add VDIF format -- but only for formats with 1 thread
* Add VLBN format == VLBA without data modulation
* Fix blank range checking for a small subset of Mark4 modes
	(Thanks to Sergei Pogrebenko and Jan Wagner for the bug report)