@@ -6,6 +6,7 @@ Ettl
 * Add genheaders() for Mark4 and Mark5B formats
 * m5test: minor improvements
 * c++11 compliance
+* Much improved capabilities for reading from stdin
 
 Version 1.4.3
 * Post 2.0.1 tagging
